modif page/Cafe+css

--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -34,8 +34,9 @@
     <div class="cafe amigos"></div>
     <div class="cafe biker"></div>    
     <div class="cafe delicatessen">Bebidas&Delicatessen</div>
-    <div class="cafe bike"></div>
+    <div class="cafe taza"></div>
     <div class="cafe sillon"></div>
+    <div class="cafe bici"></div>
 
 </section >
 
