modif page/cafeOk y css-agregue foto

--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -30,13 +30,14 @@
         </nav>
     </header>
 <section class="sectionCafeOk">
-    <div class="cafe cafe1">Cafe&Bike</div>
-    <div class="cafe amigos"></div>
-    <div class="cafe biker"></div>    
-    <div class="cafe delicatessen">Bebidas&Delicatessen</div>
-    <div class="cafe taza"></div>
-    <div class="cafe sillon"></div>
-    <div class="cafe bici"></div>
+    <div class="cafe cafe1"></div>
+    <div class="cafe cafe-bike">Cafe&Bike</div>  
+    <div class="cafe delicatessen"></div>
+    <div class="cafe bebidas">Bebidas&Delicatessen</div>
+    <div class="cafe barra"></div> 
+    <div class="cafe amigos">Amigos</div>
+<div class="cafe equipo"></div>
+    
 
 </section >
 
