--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="menuu"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav">
             <ul>
-                <li><a href="./indexOk.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/tienda.html">Tienda</a></li>
                 <li><a href="./pages/cafe.html">Cafe</a></li>
                 <li><a href="./pages/taller.html">Taller</a></li>
