--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -20,7 +20,7 @@
         <div class="menuu"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav">
             <ul>
-                <li><a href="../indexOk.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./tienda.html">Tienda</a></li>
                 <li><a href="./cafe.html">Cafe</a></li>
                 <li><a href="./taller.html">Taller</a></li>
