--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -19,7 +19,7 @@
         <div class="menuu"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav">
             <ul>
-                <li><a href="../indexOk.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./tienda.html">Tienda</a></li>
                 <li><a href="./cafe.html">Cafe</a></li>
                 <li><a href="./taller.html">Taller</a></li>
