--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./tienda.html">Tienda</a></li>
-                <li><a href="./cafe.html">Cafe</a></li>
+                <li><a href="./cafeOk.html">Cafe</a></li>
                 <li><a href="./taller.html">Taller</a></li>
                 <li><a href="./rodadas.html">Rodadas</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
