--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../pages/tienda.html">Tienda</a></li>
-                <li><a href="../pages/cafe.html">Cafe</a></li>
+                <li><a href="../pages/cafeOk.html">Cafe</a></li>
                 <li><a href="../pages/taller.html">Taller</a></li>
                 <li><a href="../pages/rodadas.html">Rodadas</a></li>
                 <li><a href="../pages/nosotros.html">Nosotros</a></li>
