aplico BS a page/nosotros-carrusel html y css

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,9 +31,38 @@
             </ul>
         </nav>
     </header>
-    <section class="nosotros">
-<div class="nosotrostercio1">
+
+    <section class="nosotros row">
+<div class="nosotrostercio1 col-12">
     <h1>Quienes Somos</h1>
+</div>
+
+<div id="carouselExampleIndicators" class="carousel slide col-sm-6 col-md-5" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../imagenes/agus2.webp" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../imagenes/fachadabikeplace.webp" class="d-block w-100" alt="...">
+      </div>            
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+
 
     <img class="agustin1" src="../imagenes/agus2.webp" alt="agustin1">
     <img class="agustin2" src="../imagenes/agus.jpg" alt="agustin2">
