haciendo responsive con BS-page/nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,45 +33,46 @@
     </header>
 
     <section class="nosotros row">
-<div class="nosotrostercio1 col-12">
-    <h1>Quienes Somos</h1>
+        <div class="nosotrostercio1 col-12">
+            <h1>Quienes Somos</h1>  
+        </div>
+
+        <div id="carouselExampleIndicators" class="carousel slide col-sm-6 col-md-5" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../imagenes/agus2.webp" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../imagenes/fachadabikeplace.webp" class="d-block w-100" alt="...">
+              </div>            
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+<div class="nosotrostercio2 col-sm-6 col-md-7 fs-6">
+<p>"The bike place: un proyecto que alguna vez tuve con mi viejo y que se hizo realidad, se que desde arriba me diste todas las fuerzas para poder lograrlo. Ahora queda seguir peleandola para que ese esfuerzo llegue a ser lo que alguna vez soñamos juntos. Agradecido de cada persona que me ayudó desde mi familia, amigos, alumnos y todas las personas que me dieron y dan una mano todos los días." <strong>Agustin Gasparini, fundador de The Bike Place y Gasparini Team.</strong></p>
+</div>
+<div class="col-sm-12 col-md-12">
+    <h1>Conocenos un poco mas!</h1>
+    <div class="nosotrostercio3 col-sm-12 justify-content-center">        
+        <p class="text-white fs-4">
+          Estamos ubicados Av San Martin 1657, Villa Carlos Paz-Cordoba. Abrimos en noviembre del 2023. Contamos con venta de bicicletas nuevas y usadas, taller mecanico, tienda para ciclistas y bar cafe. Te esperamos para conocerlo!
+        </p>
+        <video src="../videos/10000000_840106781187557_547654043812005567_n.mp4" controls></video>
 </div>
 
-<div id="carouselExampleIndicators" class="carousel slide col-sm-6 col-md-5" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../imagenes/agus2.webp" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../imagenes/fachadabikeplace.webp" class="d-block w-100" alt="...">
-      </div>            
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
-
-
-
-    <img class="agustin1" src="../imagenes/agus2.webp" alt="agustin1">
-    <img class="agustin2" src="../imagenes/agus.jpg" alt="agustin2">
-</div>
-<div class="nosotrostercio2">
-<p><strong>"The bike place: un proyecto que alguna vez tuve con mi viejo y que se hizo realidad, se que desde arriba me diste todas las fuerzas para poder lograrlo. Ahora queda seguir peleandola para que ese esfuerzo llegue a ser lo que alguna vez soñamos juntos. Agradecido de cada persona que me ayudó desde mi familia, amigos, alumnos y todas las personas que me dieron y dan una mano todos los días." Agustin Gasparini, fundador de The Bike Place y Gasparini Team.</strong></p>
-</div>
-<div class="nosotrostercio3">
-<video src="../videos/10000000_840106781187557_547654043812005567_n.mp4" controls></video>
 </div>
 
     </section>
