linkeo pages a los<a> del section

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
     <main class="index">
         <div class="indexCafe">
-            <a href="#">Cafe</a>
+            <a href="./pages/cafeOk.html">Cafe</a>
         </div>
         <div class="indexRodadas">
-            <a href="#">Rodadas</a>
+            <a href="./pages/rodadas.html">Rodadas</a>
         </div>
         <div class="indexTaller">
-            <a href="#">Taller</a>
+            <a href="./pages/taller.html">Taller</a>
         </div>
         <div class="indexTienda">
-            <a href="#">Tienda</a>
+            <a href="./pages/tienda.html">Tienda</a>
         </div>
     </main>
 
