empiezo a hacer responsive page/taller

--- a/pages/taller.html
+++ b/pages/taller.html
@@ -28,16 +28,11 @@
             </ul>
         </nav>
     </header>
+
     <section class="sectionTaller">
-        <div class="tallerTercio1">
-        <nav>
-            <ul>
-                <li><a href="#">Presupuestos</a></li>
-                <li><a href="#">Reparaciones</a></li>
-                <li><a href="#">Repuestos</a></li>
-            </ul>
-        </nav>
-    </div> 
+        <!-- <div class="tallerTercio1">
+        <h1>Presupuestos</h1>
+    </div>  -->
         <div class="tallerTercio2">
         <img src="../imagenes/taller.jpg" alt="imgTaller">           
             <p><strong>Contamos con el mejor asesoramiento para tu bike y trabajamos con repuestos nacionales e importados. nuestros expertos realizan los presupuestos en el dia y sin cargo! dejanos tus datos y un representante se pondra en contacto para pactar fecha y horario o escribinos al <a href="https://wa.me/543541315193" target="_blank">whatsapp.</a></strong>
@@ -53,7 +48,7 @@
                     <textarea name="areadetexto" id="textarea" cols="30" rows="10" placeholder="Necesito asesoramiento.."></textarea>
                     <input type="submit" value="Enviar" style="font-weight: bold;">
                 </form>
-                <img src="../icons/mechanic.png" alt="iconoMecanico">
+                <img src="#" alt="iconoMecanico">
             </div>
     
     </section>
