probando hacer menu hamburg con codigo(sinBS) en page/nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,17 @@
 <body>
     <header>
         <div class="logoo"></div>
-        <div class="menuu"><i class="fa-solid fa-bars"></i></div>
+        <div class="menuu"><a href="#"><i class="fa-solid fa-bars"></i></a>
+          <ul class="ulHamburguesa">
+            <li class="liHambuguesa"><a href="#" class="aHamburguesa">Home</a></li>
+            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Tienda</a></li>
+            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Cafe</a></li>
+            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Taller</a></li>
+            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Rodadas</a></li>
+            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Nosotros</a></li>
+
+          </ul>
+        </div>
         <nav class="nav">
             <ul>
                 <li><a href="../index.html">Home</a></li>
