linkeo pages a ul de menu hamburguesa

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,13 +21,13 @@
         <div class="logoo"></div>
         <div class="menuu"><a href="#"><i class="fa-solid fa-bars"></i></a>
           <ul class="ulHamburguesa">
-            <li class="liHambuguesa"><a href="#" class="aHamburguesa">Home</a></li>
-            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Tienda</a></li>
-            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Cafe</a></li>
-            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Taller</a></li>
-            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Rodadas</a></li>
-            <li  class="liHambuguesa"><a href="#" class="aHamburguesa">Nosotros</a></li>
-
+            <li class="liHambuguesa"><a href="../index.html" class="aHamburguesa">Home</a></li>
+            <li  class="liHambuguesa"><a href="./tienda.html" class="aHamburguesa">Tienda</a></li>
+            <li  class="liHambuguesa"><a href="./cafeOk.html" class="aHamburguesa">Cafe</a></li>
+            <li  class="liHambuguesa"><a href="./taller.html" class="aHamburguesa">Taller</a></li>
+            <li  class="liHambuguesa"><a href="./rodadas.html" class="aHamburguesa">Rodadas</a></li>
+            <li  class="liHambuguesa"><a href="./nosotros.html" class="aHamburguesa">Nosotros</a></li>
+<!--como hago para que no se me oculte el nav de la hamburguesa??-->
           </ul>
         </div>
         <nav class="nav">
