--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -6,17 +6,52 @@
     <title>TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styleOk.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
-
-
+<!--inicio link BS-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!--fin link BS-->
+<link rel="stylesheet" href="../styleOk.css">
 </head>
 
 <body>
     <header>
-        <div class="logoo"></div>
+<!--empieza menu hamb boots-->
+<nav class="navbar navbar-expand-md bg-black navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cafe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./rodadas.html">Rodadas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./taller.html">Taller</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--fin menu hamb boots-->
+
+        <!-- <div class="logoo"></div>
         <div class="menuu"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav">
             <ul>
@@ -27,7 +62,7 @@
                 <li><a href="./rodadas.html">Rodadas</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 <section class="sectionCafeOk">
     <div class="cafe cafe1"></div>
@@ -57,5 +92,11 @@
 
     </footer>
 
+
+
+    <!-- inicio script BS -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<!-- fin script BS -->
 </body>
 </html>
