--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,7 +18,43 @@
 
 <body>
     <header>
-        <div class="logoo"></div>
+      <!--empieza menu hamb boots-->
+      <nav class="navbar navbar-expand-md bg-black navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./cafeOk.html">Cafe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./rodadas.html">Rodadas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./taller.html">Taller</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--fin menu hamb boots-->
+
+
+
+        <!-- <div class="logoo"></div>
         <div class="menuu"><a href="#"><i class="fa-solid fa-bars"></i></a>
           <ul class="ulHamburguesa">
             <li class="liHambuguesa"><a href="../index.html" class="aHamburguesa">Home</a></li>
@@ -27,7 +63,6 @@
             <li  class="liHambuguesa"><a href="./taller.html" class="aHamburguesa">Taller</a></li>
             <li  class="liHambuguesa"><a href="./rodadas.html" class="aHamburguesa">Rodadas</a></li>
             <li  class="liHambuguesa"><a href="./nosotros.html" class="aHamburguesa">Nosotros</a></li>
-<!--como hago para que no se me oculte el nav de la hamburguesa??-->
           </ul>
         </div>
         <nav class="nav">
@@ -39,7 +74,7 @@
                 <li><a href="./rodadas.html">Rodadas</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
     <section class="nosotros row">
