--- a/pages/taller.html
+++ b/pages/taller.html
@@ -19,6 +19,41 @@
 
 <body>
     <header>
+<!--empieza menu hamb boots-->
+<nav class="navbar navbar-expand-md bg-black navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./tienda.html">Tienda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./cafeOk.html">Cafe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./rodadas.html">Rodadas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Taller</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--fin menu hamb boots-->
+
+<!-- 
         <div class="logoo"></div>
         <div class="menuu"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav">
@@ -30,7 +65,7 @@
                 <li><a href="./rodadas.html">Rodadas</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
     <section class="sectionTaller row">
