--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -1,21 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheBikePlace</title>
     <script src="https://kit.fontawesome.com/553c807147.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../icons/bike.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styleOk.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <!--comienza link BS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--fin link BS-->
+    <link rel="stylesheet" href="../styleOk.css">
 </head>
 
 <body>
     <header>
-        <div class="logoo"></div>
+        <!--empieza menu hamb boots-->
+        <nav class="navbar navbar-expand-md bg-black navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./cafeOk.html">Cafe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./rodadas.html">Rodadas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./taller.html">Taller</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!--fin menu hamb boots-->
+
+
+        <!-- <div class="logoo"></div>
         <div class="menuu"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav">
             <ul>
@@ -26,22 +65,24 @@
                 <li><a href="./rodadas.html">Rodadas</a></li>
                 <li><a href="./nosotros.html">Nosotros</a></li>
             </ul>
-        </nav>
+        </nav> -->
+
     </header>
     <section class="sectionTienda">
         <h1>Que estas buscando?</h1>
-    <table id="tablaTienda" cellspacing="2" cellpadding="100" ><!--border="1" cellspacing="10" cellpadding="10-->
-        <tr>
-            <th><img class="imgTienda1" src="../imagenes/bicicletasparedgrande.webp" alt="imgBicicletas"></th><!--colspan="2"-->
-            <th><a href="./accesorios.html">Accesorios</a></th>
-            <th><img class="imgTienda2" src="../imagenes/ropa1.webp" alt="imgIndumentaria"></th>
-        </tr> 
-        <tr>
-            <td><a href="./bicicletas.html"><strong>Bicicletas</strong></a></td>
-            <td><img class="imgTienda3" src="../imagenes/casco1.jpg" alt="imgAccesorios"></td>
-            <td><a href="./indumentaria.html"><strong>Indumentaria</strong></a></td>
-        </tr>
-</table>
+        <table id="tablaTienda" cellspacing="2" cellpadding="100"><!--border="1" cellspacing="10" cellpadding="10-->
+            <tr>
+                <th><img class="imgTienda1" src="../imagenes/bicicletasparedgrande.webp" alt="imgBicicletas"></th>
+                <!--colspan="2"-->
+                <th><a href="./accesorios.html">Accesorios</a></th>
+                <th><img class="imgTienda2" src="../imagenes/ropa1.webp" alt="imgIndumentaria"></th>
+            </tr>
+            <tr>
+                <td><a href="./bicicletas.html"><strong>Bicicletas</strong></a></td>
+                <td><img class="imgTienda3" src="../imagenes/casco1.jpg" alt="imgAccesorios"></td>
+                <td><a href="./indumentaria.html"><strong>Indumentaria</strong></a></td>
+            </tr>
+        </table>
 
 
     </section>
@@ -49,17 +90,30 @@
     <footer>
         <div class="footer1">
             <h5>San Martin 1657 Carlos Paz Cba Arg</h5>
-        <h5>Lun a Sab de 9hs a 21hs</h5>
+            <h5>Lun a Sab de 9hs a 21hs</h5>
         </div>
-            
-    <div class="redesSociales footer2">
-        <a href="https://wa.me/543541315193" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="https://www.instagram.com/thebikeplace_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.youtube.com/@wolfpack_adventures" target="_blank"><i class="fa-brands fa-tiktok"></i></a>  
-</div>
-    <a href="./nosotros.html" class="conocenos">Conocenos</a> 
+
+        <div class="redesSociales footer2">
+            <a href="https://wa.me/543541315193" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/thebikeplace_/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@wolfpack_adventures" target="_blank"><i
+                    class="fa-brands fa-tiktok"></i></a>
+        </div>
+        <a href="./nosotros.html" class="conocenos">Conocenos</a>
 
     </footer>
 
+
+    <!--comienza script BS-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <!--fin script BS-->
+
 </body>
+
 </html>
