--- a/pages/cafeOk.html
+++ b/pages/cafeOk.html
@@ -20,7 +20,7 @@
 <!--empieza menu hamb boots-->
 <nav class="navbar navbar-expand-md bg-black navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../imagenes/logoreal2.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
