modifico page/tienda y CSS rodadas

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -68,12 +68,25 @@
         </nav> -->
 
     </header>
-    <section class="sectionTienda">
+    <main class="mainTienda">
+        <div class="p-1 bg-danger text-white">
+            <h1>Que estas buscando?</h1>
+            <p>The Bike Place cuenta con venta de bicicletas nuevas y usadas, indumentaria y accesorios para tu bike.</p>
+        </div>
+    <div class="row">
+        <div class="tienda bici col-6"></div>
+        <div class="tienda col-6"><a href="./bicicletas.html">Bicicletas</a></div>
+        <div class="tienda col-6"><a href="./accesorios.html">Accesorios</a></div>
+        <div class="tienda accesorios col-6"></div>
+        <div class="tienda indumentaria col-6"></div>
+        <div class="tienda col-6"><a href="./indumentaria.html">Indumentaria</a></div>
+    </div>
+    </main>
+    <!-- <section class="sectionTienda">
         <h1>Que estas buscando?</h1>
-        <table id="tablaTienda" cellspacing="2" cellpadding="100"><!--border="1" cellspacing="10" cellpadding="10-->
+        <table id="tablaTienda" cellspacing="2" cellpadding="100">
             <tr>
                 <th><img class="imgTienda1" src="../imagenes/bicicletasparedgrande.webp" alt="imgBicicletas"></th>
-                <!--colspan="2"-->
                 <th><a href="./accesorios.html">Accesorios</a></th>
                 <th><img class="imgTienda2" src="../imagenes/ropa1.webp" alt="imgIndumentaria"></th>
             </tr>
@@ -85,7 +98,7 @@
         </table>
 
 
-    </section>
+    </section> -->
 
     <footer>
         <div class="footer1">
