--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -121,7 +121,7 @@
             <a href="https://wa.me/543541315193" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/thebikeplace_/" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.youtube.com/@wolfpack_adventures" target="_blank"><i
+            <a href="https://www.tiktok.com/@bike.place5" target="_blank"><i
                     class="fa-brands fa-tiktok"></i></a>
         </div>
         <a href="#" class="conocenos">Conocenos</a>
